# agentcore

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md
crates/agent/: Cargo.toml
crates/agent/examples/: agent_with_tools.rs  code_review.rs  llm_provider_call.rs  multi_agent_spawn.rs  task_and_session_store.rs
crates/agent/src/: cost.rs  lib.rs  prompt.rs  testutil.rs
crates/agent/src/agent/: agent.rs  builder.rs  context.rs  event.rs  loop.rs  mod.rs  output.rs  prompts.rs  queue.rs
crates/agent/src/persistence/: task.rs
crates/agent/src/provider/: anthropic.rs  cost.rs  litellm.rs  mistral.rs  mod.rs  provider.rs  types.rs
crates/agent/src/tools/: bash.rs  edit_file.rs  glob.rs  grep.rs  list_directory.rs  read_file.rs  spawn_agent.rs  task_tools.rs  tool_search.rs  write_file.rs
crates/agent/tests/: agent_with_tools.rs  code_review.rs  llm_provider_call.rs  multi_agent_spawn.rs  task_and_session_store.rs
crates/agentwerk2/: Cargo.toml
crates/agentwerk2/src/: agents.rs  event.rs  lib.rs
crates/agentwerk2/src/agents/: agent.rs  loop.rs  mod.rs  policy.rs  stats.rs  tickets.rs
crates/agentwerk2/src/prompts/: builder.rs  mod.rs  section.rs
crates/agentwerk2/src/providers/: anthropic.rs  litellm.rs  mistral.rs  mod.rs  model.rs  openai.rs  types.rs
crates/agentwerk2/src/tools/: bash.rs  edit_file.rs  edit_file.tool.json  error.rs  glob.rs  glob.tool.json  grep.rs  grep.tool.json  list_directory.rs  list_directory.tool.json  mod.rs  read_file.rs  read_file.tool.json  tool.rs  tool_search.rs  tool_search.tool.json  util.rs  web_fetch.rs  write_file.rs
crates/agentwerk2/src/tools/tickets/: manage_tickets.rs  manage_tickets.tool.json  mod.rs  read_tickets.tool.json  write_tickets.tool.json
crates/use-cases/: Cargo.toml
crates/use-cases/src/: lib.rs
crates/use-cases/src/cli/: project_scanner.rs
crates/use-cases/src/deep_research/: main.rs
crates/use-cases/src/deep_research/prompts/: report-writer.behavior.md  report-writer.role.md  researcher.behavior.md  researcher.role.md  researcher_1.role.md  researcher_2.role.md
crates/use-cases/src/deep_research_v2/: main.rs
crates/use-cases/src/deep_research_v2/prompts/: report-writer.behavior.md  report-writer.role.md  researcher.behavior.md  researcher.role.md
crates/use-cases/src/divide_and_conquer/: main.rs
crates/use-cases/src/divide_and_conquer/prompts/: worker.behavior.md  worker.role.md
crates/use-cases/src/malware_scanner/: main.rs  report.rs  scan.rs
crates/use-cases/src/malware_scanner/indicators_of_compromise/: cpp.md  go.md  haskell.md  javascript.md  python.md  rust.md
crates/use-cases/src/malware_scanner/prompts/: ioc-agent.md  security-analyst.md  security-investigator.md  technology-guru.md
crates/use-cases/src/model_pricing_tracker/: main.rs
crates/use-cases/src/project_scanner/: main.rs
crates/use-cases/src/terminal_repl/: main.rs
(+252 files in other folders)
