[package]
name = "agent"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "fs", "io-util", "process", "time", "signal"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
libc = "0.2"

[dev-dependencies]
tempfile = "3"
reqwest = { version = "0.12", features = ["json"] }

[[example]]
name = "llm_provider_call"

[[example]]
name = "agent_with_tools"

[[example]]
name = "multi_agent_spawn"

[[example]]
name = "task_and_session_store"

[[example]]
name = "code_review"
