[package]
name = "agentwerk2"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "process", "time"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures-util = "0.3"

[dev-dependencies]
tempfile = "3"
